# mathlib

./: CHANGELOG.md  Cargo.toml  README.md  THEORY.md
.github/workflows/: ci.yml
benches/: branch_benchmark.rs  constant_time_bench.rs  field_add_bench.rs  math_bench.rs  mul_bench.rs  mul_benchmark.rs  poly_bench.rs  xor_bench.rs  xor_benchmark.rs
examples/: generate_params.rs  poly_display.rs
lumen-math-macros/: Cargo.toml
lumen-math-macros/src/: lib.rs
mathlib_macros/: Cargo.toml
mathlib_macros/src/: lib.rs
src/: lib.rs  main.rs  traits.rs
src/arch/x86_64/: avx2.rs  mod.rs
src/big_int/: i1024.rs  mod.rs  u1024.rs
src/big_int/backend/: avx2.rs  gmp.rs  native.rs
src/core/: field.rs  int.rs  mod.rs
src/field/: config.rs  constants.rs  element.rs  mod.rs  montgomery.rs
src/num/: mod.rs  u128.rs  u256.rs  u512.rs
src/num/int/: mod.rs  u128.rs  u256.rs  u512.rs
src/num/prime_field/: field_element.rs
src/poly/: dense.rs  mod.rs  multivariate.rs  ntt.rs  univariate.rs
src/poly/ntt/: config.rs  cyclic.rs  mod.rs  negacyclic.rs  small.rs
src/protocol/: crt.rs  gcd.rs
src/ring/: element.rs  mod.rs
tests/: compute_utils_test.rs  const_field.rs  constant_time_test.rs  derive_test.rs  digest_test.rs  field_element_test.rs  i1024_test.rs  integration_test.rs  negacyclic_ntt_test.rs  ntt_comprehensive_test.rs  ntt_test.rs  polynomial_display_test.rs  polynomial_integration_test.rs  polynomial_large_coeff_test.rs  polynomial_test.rs  property_tests.rs  protocol_test.rs  ring_element_test.rs  u1024_modular_test.rs  u1024_test.rs
