[package]
name = "mathlib"
version = "0.2.2"
edition = "2024"

[dependencies]
libc = "0.2"
rand = "0.8"
num-integer = "0.1.46"
num-bigint = { version = "0.4.6", features = ["rand"]}


[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
criterion = "0.5"
num-traits = "0.2"
proptest = "1.4"

[features]
default = ["avx2", "gmp"]
gmp = []
avx2 = []

[[bench]]
name = "math_bench"
harness = false

[[bench]]
name = "poly_bench"
harness = false